@@ -1,5 +1,6 @@
 22.5
 -----
+* [*] [Jetpack-only] Reader: Fix the display of the followed topics in the filter sheet when they're written in non-latin languages. [#20702]
 * [*] [Jetpack-only] Reader: Fixed an issue that was causing the Report and Block actions to be missing from Post Menu actions sheet. [#20705]
 * [***] Enables editing of the site homepage for sites using block-based themes directly from the pages list. [#20713]
 
